--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.0.1"
+    "dotenv": "^16.4.7",
+    "express": "^5.0.1",
+    "mongoose": "^8.12.1"
   }
 }
